# wealthpilot-ai

./: .coveragerc  .env.example  .gitignore  README.md  main.py  pyproject.toml
.github/workflows/: ci.yml
config/: default.yaml  risk_categories.yaml  thresholds.yaml
docs/: architecture.md
docs/adr/: 001-crewai-orchestration.md  002-cvxpy-optimisation.md  003-shap-explainability.md
notebooks/: demo_rebalancing_cycle.ipynb
src/agents/: orchestrator.py
src/backtesting/: backtest_engine.py  performance_analyser.py  scenario_runner.py  strategy_comparator.py
src/compliance/: bias_detector.py  compliance_auditor.py  explainability_scorecard.py  regulatory_reporter.py
src/dashboard/: app.py
src/data/: client_profile_generator.py  market_data_simulator.py  portfolio_generator.py
src/explainability/: advisor_explainer.py  client_explainer.py  compliance_explainer.py  counterfactual_generator.py  explanation_generator.py  lime_integration.py  shap_integration.py
src/monitoring/: drift_calculator.py  drift_monitor.py  threshold_manager.py
src/optimisation/: constraint_manager.py  cost_estimator.py  liquidity_scorer.py  portfolio_optimiser.py  tax_optimiser.py  trade_list_generator.py
tests/: test_backtest_engine.py  test_backtesting_extras.py  test_compliance.py  test_data_layer.py  test_drift_calculator.py  test_explainability_extras.py  test_explanation_generator.py  test_integration.py  test_monitoring.py  test_optimisation.py  test_override_extras.py  test_override_system.py  test_portfolio_optimiser.py  test_tax_optimiser.py  test_trigger_evaluator.py
(+14 files in other folders)
