[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "portfolio-rebalancing-agent"
version = "1.0.0"
description = "Autonomous Portfolio Rebalancing Agent with Explainable Decisions"
requires-python = ">=3.10"
dependencies = [
    "anthropic>=0.40.0",
    "langchain>=0.3.0",
    "langchain-anthropic>=0.3.0",
    "crewai>=0.80.0",
    "crewai-tools>=0.17.0",
    "cvxpy>=1.4.0",
    "pandas>=2.0.0",
    "numpy>=1.26.0",
    "scipy>=1.12.0",
    "scikit-learn>=1.4.0",
    "xgboost>=2.0.0",
    "shap>=0.45.0",
    "lime>=0.2.0",
    "streamlit>=1.40.0",
    "plotly>=5.20.0",
    "pydantic>=2.7.0",
    "pyyaml>=6.0.0",
    "python-dotenv>=1.0.0",
    "pytest>=8.0.0",
    "pytest-cov>=5.0.0",
    "pytest-mock>=3.14.0",
    "pytest-asyncio>=0.24.0",
    "black>=24.0.0",
    "ruff>=0.6.0",
    "rich>=13.0.0",
    "loguru>=0.7.0",
    "openpyxl>=3.1.0",
]

[project.optional-dependencies]
dev = [
    "ipykernel",
    "notebook",
    "matplotlib>=3.8.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[tool.black]
line-length = 100
target-version = ["py310", "py311"]

[tool.ruff]
line-length = 100
select = ["E", "F", "I", "N", "W", "UP"]
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--cov=src --cov-report=term-missing --cov-fail-under=85"
asyncio_mode = "auto"
